cambio la version de python

--- a/Clase_01/001_Python_para_PLN.ipynb
+++ b/Clase_01/001_Python_para_PLN.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "bMcPd2LD9VwQ"
+      },
       "source": [
         "# Clase 1: Fundamentos de Python 🐍 - Herramientas para Lingüistica Computacional\n",
         "\n",
@@ -24,13 +13,13 @@
         "2.  **Tipos de Datos:** ¿Qué guardamos en esas cajas? (Texto, números, etc.).\n",
         "3.  **Operadores:** Cómo hacer cosas con nuestros datos.\n",
         "4.  **Condicionales:** Cómo hacer que nuestro programa tome decisiones."
-      ],
-      "metadata": {
-        "id": "bMcPd2LD9VwQ"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zFUI8wiM9nGf"
+      },
       "source": [
         "## 1. Variables: Nuestras \"Cajas\" con Nombre\n",
         "\n",
@@ -40,18 +29,23 @@
         "* No pueden empezar con un número.\n",
         "* No pueden tener espacios (usa `_` en su lugar, como `mi_variable`).\n",
         "* No uses palabras que Python ya reserva para sí mismo (como `print`, `if`, etc.)."
-      ],
-      "metadata": {
-        "id": "zFUI8wiM9nGf"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "cUYvVTt285o9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hola, mundo del PLN!\n"
+          ]
+        }
+      ],
       "source": [
         "# Creamos nuestra primera variable.\n",
         "# La variable se llama 'saludo' y contiene el texto \"Hola, mundo del PLN!\"\n",
@@ -63,6 +57,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "O_Rxi4Ei-DXR"
+      },
       "source": [
         "## 2. Tipos de Datos: ¿Qué hay dentro de las cajas?\n",
         "\n",
@@ -74,13 +71,25 @@
         "* **Boolean (`bool`):** Representa la verdad. Solo puede ser `True` o `False`.\n",
         "\n",
         "Para saber qué tipo de dato tiene una variable, usamos la función `type()`."
-      ],
-      "metadata": {
-        "id": "O_Rxi4Ei-DXR"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "bbpwvq56-EUs"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'str'>\n",
+            "<class 'int'>\n",
+            "<class 'bool'>\n"
+          ]
+        }
+      ],
       "source": [
         "# Variable de tipo String\n",
         "oracion = \"El análisis de texto es fascinante.\"\n",
@@ -95,24 +104,22 @@
         "print(type(oracion))\n",
         "print(type(cantidad_de_palabras))\n",
         "print(type(es_interesante))"
-      ],
-      "metadata": {
-        "id": "bbpwvq56-EUs"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "> **Nota importante:** ¿Por qué nos importa el tipo de dato? Porque define qué operaciones podemos hacer. Por ejemplo, podemos `sumar` dos números, pero no podemos `dividir` un texto. `type()` es nuestro mejor amigo para no cometer errores."
-      ],
       "metadata": {
         "id": "_ZuECWbWCoj2"
-      }
+      },
+      "source": [
+        "> **Nota importante:** ¿Por qué nos importa el tipo de dato? Porque define qué operaciones podemos hacer. Por ejemplo, podemos `sumar` dos números, pero no podemos `dividir` un texto. `type()` es nuestro mejor amigo para no cometer errores."
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "exBYLuph-W_S"
+      },
       "source": [
         "## 3. Operadores: Haciendo Cosas con los Datos\n",
         "\n",
@@ -120,13 +127,23 @@
         "\n",
         "* **Operador `+` con texto:** Une (concatena) dos strings.\n",
         "* **Operadores de comparación (`==`, `!=`):** Preguntan si dos valores son iguales o diferentes. ¡Siempre devuelven un Booleano (`True` o `False`)!"
-      ],
-      "metadata": {
-        "id": "exBYLuph-W_S"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "Ou-tiI5F-Xzj"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "procesamiento de lenguaje\n"
+          ]
+        }
+      ],
       "source": [
         "palabra1 = \"procesamiento\"\n",
         "palabra2 = \"lenguaje\"\n",
@@ -134,43 +151,60 @@
         "# Unimos las palabras con un espacio en medio\n",
         "frase_completa = palabra1 + \" de \" + palabra2\n",
         "print(frase_completa)"
-      ],
-      "metadata": {
-        "id": "Ou-tiI5F-Xzj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "jz5Q8KEy-icx"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¿Son iguales numero_a y numero_b?\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
         "# Comparemos dos números\n",
         "numero_a = 10\n",
         "numero_b = 20\n",
         "print(\"¿Son iguales numero_a y numero_b?\")\n",
         "print(numero_a == numero_b) # Esto imprimirá False"
-      ],
-      "metadata": {
-        "id": "jz5Q8KEy-icx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "w_sby7GP-pUG"
+      },
       "source": [
         "## 4. Condicionales: Tomando Decisiones\n",
         "\n",
         "Los condicionales `if`, `elif` y `else` permiten que nuestro programa ejecute cierto código solo si se cumple una condición.\n",
         "\n",
         "La **indentación** (el espacio al principio de la línea) es MUY importante. Le dice a Python qué código pertenece al `if`."
-      ],
-      "metadata": {
-        "id": "w_sby7GP-pUG"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "V8Bh9fCP-o6F"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Esa es una palabra interesante, ¡pero no es Python!\n"
+          ]
+        }
+      ],
       "source": [
         "# Pedimos al usuario que escriba una palabra\n",
         "palabra_usuario = input(\"Escribí una palabra clave (ej: Python): \")\n",
@@ -180,15 +214,13 @@
         "    print(\"¡Genial! Ese es el lenguaje que estamos aprendiendo.\")\n",
         "else:\n",
         "    print(\"Esa es una palabra interesante, ¡pero no es Python!\")"
-      ],
-      "metadata": {
-        "id": "V8Bh9fCP-o6F"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "h7g9LYwVC24X"
+      },
       "source": [
         "## Ejercicio Práctico 1: Analizador Simple de Frases\n",
         "\n",
@@ -200,13 +232,24 @@
         "2.  Verifica si la palabra \"Python\" está en la frase.\n",
         "3.  Verifica si la frase es corta (menos de 20 caracteres) o larga.\n",
         "4.  Imprimí un mensaje diferente para cada caso."
-      ],
-      "metadata": {
-        "id": "h7g9LYwVC24X"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "lKxdo_nhDJbu"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "La frase tiene 0 caracteres.\n",
+            "Es una frase corta, ¡directa al punto!\n"
+          ]
+        }
+      ],
       "source": [
         "# 1. Pedí al usuario que ingrese una frase\n",
         "frase_usuario = input(\"Por favor, ingresa una frase: \")\n",
@@ -228,15 +271,13 @@
         "    print(\"Es una frase corta, ¡directa al punto!\")\n",
         "else:\n",
         "    print(\"Una frase interesante y de buena longitud.\")"
-      ],
-      "metadata": {
-        "id": "lKxdo_nhDJbu"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "b-W8YA1pDffS"
+      },
       "source": [
         "---\n",
         "## Glosario Rápido de la Clase 1\n",
@@ -251,13 +292,13 @@
         "* **Indentación**: Los espacios al principio de una línea. En Python, es fundamental y define qué código pertenece a un `if`, un bucle, etc.\n",
         "* **Función**: Un bloque de código con nombre que realiza una tarea específica (ej: `print()`, `len()`, `type()`).\n",
         "---"
-      ],
-      "metadata": {
-        "id": "b-W8YA1pDffS"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "so0HNyTN_eXZ"
+      },
       "source": [
         "## 5. Estructuras de Datos: Organizando nuestra Información\n",
         "\n",
@@ -266,65 +307,109 @@
         "* **Listas (`list`):** Colecciones ordenadas y modificables de elementos.\n",
         "* **Tuplas (`tuple`):** Colecciones ordenadas pero INMODIFICABLES de elementos.\n",
         "* **Diccionarios (`dict`):** Colecciones de pares clave-valor (como un diccionario real)."
-      ],
-      "metadata": {
-        "id": "so0HNyTN_eXZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "q7shxpkD_fN3"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Lista original: ['hola', 'mundo', 'nlp', 'python']\n"
+          ]
+        }
+      ],
       "source": [
         "# Listas (pueden modificarse)\n",
         "palabras = ['hola', 'mundo', 'nlp', 'python']\n",
         "print(\"Lista original:\", palabras)"
-      ],
-      "metadata": {
-        "id": "q7shxpkD_fN3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "4c0F3mQD_p0S"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Después de append: ['hola', 'mundo', 'nlp', 'python', 'texto']\n"
+          ]
+        }
+      ],
       "source": [
         "# Agregar elemento\n",
         "palabras.append('texto')\n",
         "print(\"Después de append:\", palabras)"
-      ],
-      "metadata": {
-        "id": "4c0F3mQD_p0S"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "OB0sWF_b_puE"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Después de remove: ['hola', 'nlp', 'python', 'texto']\n"
+          ]
+        }
+      ],
       "source": [
         "# Remover elemento\n",
         "palabras.remove('mundo')\n",
         "print(\"Después de remove:\", palabras)"
-      ],
-      "metadata": {
-        "id": "OB0sWF_b_puE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "GmpBmkTF_pnC"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Primera palabra: hola\n",
+            "Última palabra: texto\n"
+          ]
+        }
+      ],
       "source": [
         "# Acceder por índice\n",
         "print(\"Primera palabra:\", palabras[0])\n",
         "print(\"Última palabra:\", palabras[-1])"
-      ],
-      "metadata": {
-        "id": "GmpBmkTF_pnC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "id": "cveEdpXe_0bC"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tupla de coordenadas: (4, 5)\n",
+            "Segundo color: verde\n"
+          ]
+        }
+      ],
       "source": [
         "# Tuplas (NO pueden modificarse)\n",
         "coordenadas = (4, 5)\n",
@@ -332,66 +417,100 @@
         "\n",
         "print(\"Tupla de coordenadas:\", coordenadas)\n",
         "print(\"Segundo color:\", colores[1])"
-      ],
-      "metadata": {
-        "id": "cveEdpXe_0bC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Esto causaría un error:\n",
-        "#colores[1] = 'amarillo'  # Descomenta para ver el error"
-      ],
+      "execution_count": 14,
       "metadata": {
         "id": "OOe7sJu-_-Ok"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Esto causaría un error:\n",
+        "#colores[1] = 'amarillo'  # Descomenta para ver el error"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "id": "eZekMeklAIe7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Diccionario original: {'python': 15, 'nlp': 23, 'texto': 42}\n"
+          ]
+        }
+      ],
       "source": [
         "# Diccionarios (clave-valor)\n",
         "frecuencia_palabras = {'python': 15, 'nlp': 23, 'texto': 42}\n",
         "print(\"Diccionario original:\", frecuencia_palabras)"
-      ],
-      "metadata": {
-        "id": "eZekMeklAIe7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "id": "QUZQdodwAKrV"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Después de agregar 'datos': {'python': 15, 'nlp': 23, 'texto': 42, 'datos': 18}\n"
+          ]
+        }
+      ],
       "source": [
         "# Agregar nueva entrada\n",
         "frecuencia_palabras['datos'] = 18\n",
         "print(\"Después de agregar 'datos':\", frecuencia_palabras)"
-      ],
-      "metadata": {
-        "id": "QUZQdodwAKrV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "SjuSdoBDAKnt"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Frecuencia de 'nlp': 23\n",
+            "Frecuencia de palabra inexistente: 0\n"
+          ]
+        }
+      ],
       "source": [
         "# Acceder a valores\n",
         "print(\"Frecuencia de 'nlp':\", frecuencia_palabras.get('nlp', 0))\n",
         "print(\"Frecuencia de palabra inexistente:\", frecuencia_palabras.get('inexistente', 0))"
-      ],
-      "metadata": {
-        "id": "SjuSdoBDAKnt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "id": "JpoRqGReAk_G"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El texto tiene más de 3 palabras\n",
+            "Y además menciona NLP!\n"
+          ]
+        }
+      ],
       "source": [
         "# Condicionales con estructuras de datos\n",
         "texto = \"Python es excelente para NLP\"\n",
@@ -405,15 +524,28 @@
         "    print(\"El texto menciona Python\")\n",
         "else:\n",
         "    print(\"Texto corto sin palabras clave reconocidas\")"
-      ],
-      "metadata": {
-        "id": "JpoRqGReAk_G"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "BdwBJqW2Aypa"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Palabras largas en el texto:\n",
+            "- Python (6 letras)\n",
+            "- lenguaje (8 letras)\n",
+            "- programación (12 letras)\n",
+            "- ampliamente (11 letras)\n",
+            "- utilizado (9 letras)\n"
+          ]
+        }
+      ],
       "source": [
         "# Bucles para procesar listas\n",
         "texto = \"Python es un lenguaje de programación ampliamente utilizado en PLN\"\n",
@@ -422,24 +554,32 @@
         "for palabra in texto.split():\n",
         "    if len(palabra) > 5:  # Palabras de más de 5 letras\n",
         "        print(f\"- {palabra} ({len(palabra)} letras)\")"
-      ],
-      "metadata": {
-        "id": "BdwBJqW2Aypa"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Ejercicio Practico"
-      ],
       "metadata": {
         "id": "E9DyAER9BFkN"
-      }
+      },
+      "source": [
+        "##Ejercicio Practico"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "id": "yrTDTtQOBGEN"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¡Intenta resolver este ejercicio!\n"
+          ]
+        }
+      ],
       "source": [
         "# Ejercicio: Contador de palabras\n",
         "texto = \"Python es un lenguaje de programación ampliamente utilizado en el procesamiento del lenguaje natural\"\n",
@@ -450,12 +590,31 @@
         "# 3. Contar frecuencia de cada palabra\n",
         "\n",
         "print(\"¡Intenta resolver este ejercicio!\")"
-      ],
-      "metadata": {
-        "id": "yrTDTtQOBGEN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
