agrego resolución de ejercicio

--- a/Clase_01/001_Python_para_PLN.ipynb
+++ b/Clase_01/001_Python_para_PLN.ipynb
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {
         "id": "lKxdo_nhDJbu"
       },
@@ -245,8 +245,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "La frase tiene 0 caracteres.\n",
-            "Es una frase corta, ¡directa al punto!\n"
+            "La frase tiene 11 caracteres.\n",
+            "¡Excelente! Tu frase menciona nuestro lenguaje de programación favorito.\n"
           ]
         }
       ],
@@ -260,7 +260,6 @@
         "print(f\"La frase tiene {longitud_frase} caracteres.\")\n",
         "\n",
         "# 2. Revisá las condiciones con if/elif/else\n",
-        "# ¡Tu código va acá!\n",
         "\n",
         "# Pista: Podes usar el operador 'in' para ver si un texto está dentro de otro.\n",
         "# Ejemplo: if \"palabra\" in mi_frase:\n",
@@ -433,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 23,
       "metadata": {
         "id": "eZekMeklAIe7"
       },
@@ -454,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 24,
       "metadata": {
         "id": "QUZQdodwAKrV"
       },
@@ -475,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 28,
       "metadata": {
         "id": "SjuSdoBDAKnt"
       },
@@ -567,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 39,
       "metadata": {
         "id": "yrTDTtQOBGEN"
       },
@@ -576,20 +575,40 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "¡Intenta resolver este ejercicio!\n"
+            "'python' aparece 1 veces\n",
+            "'es' aparece 1 veces\n",
+            "'un' aparece 1 veces\n",
+            "'lenguaje' aparece 2 veces\n",
+            "'de' aparece 1 veces\n",
+            "'programación' aparece 1 veces\n",
+            "'ampliamente' aparece 1 veces\n",
+            "'utilizado' aparece 1 veces\n",
+            "'en' aparece 1 veces\n",
+            "'el' aparece 1 veces\n",
+            "'procesamiento' aparece 1 veces\n",
+            "'del' aparece 1 veces\n",
+            "'natural' aparece 1 veces\n"
           ]
         }
       ],
       "source": [
         "# Ejercicio: Contador de palabras\n",
+        "from collections import Counter\n",
         "texto = \"Python es un lenguaje de programación ampliamente utilizado en el procesamiento del lenguaje natural\"\n",
         "\n",
         "# Tu código acá:\n",
         "# 1. Convertir texto a minúsculas\n",
+        "texto = texto.lower()\n",
         "# 2. Dividir en palabras\n",
+        "palabras = texto.split()\n",
         "# 3. Contar frecuencia de cada palabra\n",
+        "frecuencias = {}\n",
         "\n",
-        "print(\"¡Intenta resolver este ejercicio!\")"
+        "for palabra in palabras:\n",
+        "    frecuencias[palabra] = frecuencias.get(palabra, 0) + 1\n",
+        "    \n",
+        "for palabra, frecuencia in frecuencias.items():\n",
+        "    print(f\"'{palabra}' aparece {frecuencia} veces\")\n"
       ]
     }
   ],
